fix: update add gc class